--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.4",
     "core-js": "^3.6.5",
     "highcharts-vue": "^1.4.0",
+    "jquery": "^3.6.0",
     "vue": "^2.6.11",
     "vue-axios": "^3.3.7"
   },
